modules/elmsubmit/lib/parser.out


Unused terminals:


Grammar

Rule 1     submission -> CDSON assignmentList CDSOFF
Rule 2     assignmentList -> assignment
Rule 3     assignmentList -> assignment assignmentList
Rule 4     assignment -> KEY VALUE

Terminals, with rules where they appear

CDSOFF               : 1
CDSON                : 1
KEY                  : 4
VALUE                : 4
error                : 

Nonterminals, with rules where they appear

assignment           : 2 3
assignmentList       : 1 3
submission           : 0


Parsing method: SLR


state 0

    (0) S' -> . submission
    (1) submission -> . CDSON assignmentList CDSOFF

    CDSON           shift and go to state 1


    submission                     shift and go to state 2

state 1

    (1) submission -> CDSON . assignmentList CDSOFF
    (2) assignmentList -> . assignment
    (3) assignmentList -> . assignment assignmentList
    (4) assignment -> . KEY VALUE

    KEY             shift and go to state 4


    assignmentList                 shift and go to state 5
    assignment                     shift and go to state 3

state 2

    (0) S' -> submission .




state 3

    (2) assignmentList -> assignment .
    (3) assignmentList -> assignment . assignmentList
    (2) assignmentList -> . assignment
    (3) assignmentList -> . assignment assignmentList
    (4) assignment -> . KEY VALUE

    CDSOFF          reduce using rule 2 (assignmentList -> assignment .)
    KEY             shift and go to state 4


    assignment                     shift and go to state 3
    assignmentList                 shift and go to state 6

state 4

    (4) assignment -> KEY . VALUE

    VALUE           shift and go to state 7



state 5

    (1) submission -> CDSON assignmentList . CDSOFF

    CDSOFF          shift and go to state 8



state 6

    (3) assignmentList -> assignment assignmentList .

    CDSOFF          reduce using rule 3 (assignmentList -> assignment assignmentList .)



state 7

    (4) assignment -> KEY VALUE .

    CDSOFF          reduce using rule 4 (assignment -> KEY VALUE .)
    KEY             reduce using rule 4 (assignment -> KEY VALUE .)



state 8

    (1) submission -> CDSON assignmentList CDSOFF .

    $               reduce using rule 1 (submission -> CDSON assignmentList CDSOFF .)


